fixed resolution and images

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://ticotimes.net/wp-content/uploads/2016/02/160211AnakinSloth09.jpg);
+    background-image: url("./images/babySloth.jpg");
   background-size: cover;
   }
   
